test/sema/c-enum-strongly-typed.delta
// RUN: %not %delta -typecheck -Iinputs %s | %FileCheck %s

import "c-enum.h";

void baz(Foo f) {}

void main() {
    baz(FOO);
    // CHECK: [[@LINE+1]]:9: error: invalid argument #1 type 'int' to 'baz', expected 'Foo'
    baz(42);
}
